--- a/index.html
+++ b/index.html
@@ -15,26 +15,29 @@
 
             <div class="hlavni-recept">
                 <div class="recept-meta">
-                    <div class="recept-kategorie">Grilování</div>
+                    <div class="recept-kategorie">Hamburger</div>
                     <div class="recept-komentare">5 komentářů</div>
+                    <img class="fotoburger" src="images/burger.jpg" alt="burger">
                 </div>
                 <h2 class="recept-nazev">Domácí hovězí burger</h2>
             </div>
 
             <div class="sloupec">
 
-                <div class="recept recept2">
+                <div class="recept-recept2">
                     <div class="recept-meta">
                         <div class="recept-kategorie">Asijská kuchyně</div>
                         <div class="recept-komentare">16 komentářů</div>
+                        <img class="fotosushi" src="images/sushi.jpg" alt="sushi">
                     </div>
                     <h2 class="recept-nazev">Nigiri sushi</h2>
                 </div>
 
-                <div class="recept recept3">
+                <div class="recept-recept3">
                     <div class="recept-meta">
                         <div class="recept-kategorie">Omáčky</div>
                         <div class="recept-komentare">23 komentářů</div>
+                        <img class="fotorajcata" src="images/rajcata.jpg" alt="rajcata">
                     </div>
                     <h2 class="recept-nazev">Chili rajčatová omáčka</h2>
                 </div>
@@ -43,18 +46,20 @@
 
             <div class="sloupec">
 
-                <div class="recept recept4">
+                <div class="recept-recept4">
                     <div class="recept-meta">
                         <div class="recept-kategorie">Drůbež</div>
                         <div class="recept-komentare">7 komentářů</div>
+                        <img class="fotokure" src="images/kure.jpg" alt="kure">
                     </div>
                     <h2 class="recept-nazev">Pečené kuře na jablkách</h2>
                 </div>
 
-                <div class="recept recept5">
+                <div class="recept-recept5">
                     <div class="recept-meta">
                         <div class="recept-kategorie">Grilování</div>
                         <div class="recept-komentare">19 komentářů</div>
+                        <img class="fotogril" src="images/grilovani.jpg" alt="grilovacka">
                     </div>
                     <h2 class="recept-nazev">Zahradní grilovačka</h2>
                 </div>
